
Bug Fixes
 * Slashes (/) not allowed in person id (#1322)
 * Inline: isolation not properly enforced by firewall if registration is disabled (#1330)
 * Several small fixes in pfdhcplistener 
 * Inline: NAT out behavior of PacketFence was changed for the best
 * Keep IP to MAC associations across restarts (#1343)
 * Interface enforcement is now configurable through Web UI / CLI (#1335)
 * Interim fixes: #1349

--------------------------------------------------------------------------------
Version <release> released on <releaseDate>

Enhancements
 * Several new DHCP fingerprints (from our spinoff www.fingerbank.org)
 * Better support of WISPr (captive portal detection)
 * Configuration flag to disable the captive portal's network detection feature
 * Added support for months in normalize_time (#1291)

Bug Fixes
 * Local SNMP Trap handler now configured by default

--------------------------------------------------------------------------------
Version 3.0.3 released on 2011-11-21

New Hardware Support
 * Cisco Catalyst 6500 series switches in port-security
 * HP Procurve 5400 now supporting mac auth and 802.1x (with VoIP)

Enhancements
 * Performance improvements under stressed workloads
 * Translatable remediation templates (if a translated version exists, it'll override the default)
 * Guest management interface can be translated
 * More documentation for service watch
 * Eliminated some unnecessary warnings
 * Better help in the web admin UI
 * Added a new addon: import-node-csv.pl - bulk node import tool
 * Added a new addon: network-save-configs.pl - saves configs (write mem) for the whole network (only Cisco for now)

Bug Fixes
 * 802.1X broken on Cisco Catalyst 3750 (#1286)
 * Pop-up windows are too small (#1078)
 * Red Hat Enterprise Linux 6 installation instructions
 * Encoding on the remediation pages and on the release pages (scan, access enabled)
 * SNMPv3 issues affecting all the Cisco wired product line (#1284)